# SearchEngine

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
output/: answers.json
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
